commit donde añadí imágenes

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,7 +12,29 @@ code {
     monospace;
 }
 
-.header img{
-  display:block;
-  margin:auto;
+.header #logoTec{
+  display: block;
+  margin: auto;
+  width: 40%;
 }
+
+.header #logoSonora{
+  display: block;
+  margin: auto;
+  width: 10%;
+}
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .header #logoTec{
+    display: block;
+    margin: auto;
+    width: 70%;
+  }
+  .header #logoSonora{
+    display: block;
+    margin: auto;
+    width: 20%;
+  }
+}
+
+
